2014-05-12 Distributions: Added dhalfcauchy
2014-05-12 Added partial (well, partially)
2014-05-10 Distributions: Added dwishart and rwishart
2014-05-10 Added interval
2014-05-10 LaplacesDemonCpp was created.