@@ -5,7 +5,9 @@ C++ Extension of LaplacesDemon
 
 The LaplacesDemonCpp package consists of C++ functions that replace functions written in R in LaplacesDemon.
 
-To use LaplacesDemonCpp, simply activate the LaplacesDemon library, then activate the LaplacesDemonCpp library, and any C++ functions here will replace the R functions in LaplacesDemon.
+LaplacesDemonCpp imports LaplacesDemon, Rcpp, and RcppArmadillo.
+
+To use LaplacesDemonCpp, simply activate the LaplacesDemonCpp library, and any C++ functions here will replace the R functions in LaplacesDemon.
 
 This package should be considered experimental until further along in development.
 
