@@ -1,0 +1,17 @@
+#ifndef _LaplacesDemonCpp_is_symmetric_matrix_H
+#define _LaplacesDemonCpp_is_symmetric_matrix_H
+
+#include <RcppArmadillo.h>
+
+RcppExport SEXP is_symmetric_matrix(SEXP x);
+
+#endif
+
+#ifndef _LaplacesDemonCpp_tr_H
+#define _LaplacesDemonCpp_tr_H
+
+#include <RcppArmadillo.h>
+
+RcppExport SEXP tr(SEXP x);
+
+#endif
