@@ -1,3 +1,5 @@
+2014-05-13 Matrices: Added is.symmetric.matrix and tr
+2014-05-13 Distributions: Added dmvn and dmvnc
 2014-05-12 Distributions: Added dhalfcauchy
 2014-05-12 Added partial (well, partially)
 2014-05-10 Distributions: Added dwishart and rwishart
